@@ -33,6 +33,10 @@
      [ssh.c]
      improved exit message from multiplex slave sessions; bz #1262
      reported by alexandre.nunes AT gmail.com; ok dtucker@
+   - dtucker@cvs.openbsd.org 2007/06/12 11:56:15
+     [gss-genr.c]
+     Pass GSS OID to gss_display_status to provide better information in
+     error messages.  Patch from Simon Wilkinson via bz 1220.  ok djm@
 
 20070611
  - (djm) Bugzilla #1306: silence spurious error messages from hang-on-exit
@@ -3047,4 +3051,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4695 2007/06/12 13:44:10 dtucker Exp $
+$Id: ChangeLog,v 1.4696 2007/06/12 13:44:36 dtucker Exp $
